part1/1_8/todoapp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-kub-todolist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-kub-todolist
  template:
    metadata:
      labels:
        app: dev-kub-todolist
    spec:
      containers:
        - name: dev-kub-todolist
          image: niklasku/dev_kub_todoapp:1_8
