part1/1_8/todoapp/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-kub-todolist-svc
spec:
  type: ClusterIP
  selector:
    app: dev-kub-todolist
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
