part1/1_8/todoapp/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-kub-todolist-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: dev-kub-todolist-svc
          servicePort: 2345
